sandbox/output
Item.java:14: error: cannot find symbol
        if(this.itemTpye == "Aged Brie"){
               ^
  symbol: variable itemTpye
1 error
